[tool.towncrier]
    package = "signedjson"
    filename = "CHANGELOG.md"
    directory = "changelog.d"
    issue_format = "[\\#{issue}](https://github.com/matrix-org/python-signedjson/issues/{issue})"

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "docker"
        name = "Updates to the Docker image"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Improved Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "removal"
        name = "Deprecations and Removals"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Internal Changes"
        showcontent = true

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
known_first_party = ["signedjson", "tests"]

[tool.black]
# Placeholder for now.

[tool.mypy]
files = ["signedjson", "tests"]
show_error_codes = true

[[tool.mypy.overrides]]
module = ["canonicaljson"]
ignore_missing_imports = true

[tool.poetry]
name = "signedjson"
version = "1.1.1"
description = "Sign JSON with Ed25519 signatures"
authors = ["Matrix.org Team and Contributors <packages@matrix.org>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/matrix-org/python-signedjson"
keywords = ["json"]
include = [
    { path = "changelog.d", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "tox.ini", format = "sdist" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.7"
canonicaljson = ">=1.0.0"
unpaddedbase64 = ">=1.0.1"
pynacl = ">=0.3.0"
typing_extensions = { version = ">=3.5", python = "<3.8" }
typing = { version = ">=3.5", python = "<3.8" }
importlib_metadata = { version = "*", python = "<3.8" }

[tool.poetry.dev-dependencies]
typing_extensions = ">= 3.5"
twine = "==3.7.1"
black = "==21.12b0"
isort = "==5.10.1"
mypy = "==0.931"
flake8 = "==4.0.1"
pytest = "==6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
